--- a/index.html
+++ b/index.html
@@ -36,32 +36,32 @@
   <body>
     <main class="container">
       <header>
-        <h1>Generador de portada de INATEC</h1>
+        <h1>Generador INATEC</h1>
         <img src="./inatec_logo.png" alt="Logo de INATEC" />
         <a
           class="github-button"
-          href="https://github.com/deybismelendez"
+          href="https://github.com/echacon97"
           data-color-scheme="no-preference: light; light: light; dark: dark;"
           data-size="large"
-          aria-label="Follow @deybismelendez on GitHub"
-          >Follow @deybismelendez</a
+          aria-label="Follow @echacon97 on GitHub"
+          >Follow @echacon97</a
         >
         <a
           class="github-button"
-          href="https://github.com/deybismelendez/portada-inatec"
+          href="https://github.com/echacon97/portada-inatec"
           data-color-scheme="no-preference: light; light: light; dark: dark;"
           data-icon="octicon-star"
           data-size="large"
-          aria-label="Star deybismelendez/portada-inatec on GitHub"
+          aria-label="Star echacon97/portada-inatec on GitHub"
           >Star</a
         >
         <a
           class="github-button"
-          href="https://github.com/deybismelendez/portada-inatec/fork"
+          href="https://github.com/echacon97/portada-inatec/fork"
           data-color-scheme="no-preference: light; light: light; dark: dark;"
           data-icon="octicon-repo-forked"
           data-size="large"
-          aria-label="Fork deybismelendez/portada-inatec on GitHub"
+          aria-label="Fork echacon97/portada-inatec on GitHub"
           >Fork</a
         >
       </header>
@@ -90,7 +90,7 @@
               name="centro"
               id="centro"
               placeholder="Centro"
-              value="CENTRO TECNOLÓGICO MANAGUA"
+              value=""
             />
           </div>
           <div>
@@ -100,7 +100,7 @@
               name="carrera"
               id="carrera"
               placeholder="Carrera"
-              value="TÉCNICO ESPECIALISTA EN DESARROLLO DE SOFTWARE"
+              value=""
             />
           </div>
         </div>
