--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Generador de portada para documentos del Instituto Nacional Tecnológico (INATEC). Crea portadas personalizadas con fecha, lugar, centro, carrera, módulo, tarea y nombres de estudiantes y docente."
+      content="Generador de portada para documentos del Instituto Nacional Tecnológico . Crea portadas personalizadas con fecha, lugar, centro, carrera, módulo, tarea y nombres de estudiantes y docente."
     />
     <meta
       name="keywords"
@@ -36,7 +36,7 @@
   <body>
     <main class="container">
       <header>
-        <h1>Generador INATEC</h1>
+        <h1>GENERADOR PORTADA INATEC</h1>
         <img src="./inatec_logo.png" alt="Logo de INATEC" />
         <a
           class="github-button"
