Update title and header for UNAN branding

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <meta name="twitter:image" content="/inatec_logo.png" />
     <meta name="twitter:site" content="@DeybisMelendez" />
-    <title>Generador de Portada INATEC PDF</title>
+    <title>Generador de Portada UNAN PDF</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.blue.min.css"
@@ -36,7 +36,7 @@
   <body>
     <main class="container">
       <header>
-        <h1>GENERADOR PORTADA INATEC</h1>
+        <h1>GENERADOR PORTADA UNAN</h1>
         <img src="./inatec_logo.png" alt="Logo de INATEC" />
         <a
           class="github-button"
