--- a/index.html
+++ b/index.html
@@ -5,75 +5,136 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Generador de portada para documentos de la UNAN-Managua. Crea portadas personalizadas con fecha, facultad, carrera y datos de clase."
+      content="Generador de portada para documentos de la Universidad Nacional Autónoma de Nicaragua. Crea portadas personalizadas con fecha, lugar, facultad, carrera, clase, tarea y nombres de estudiantes y docente."
+    />
+    <meta
+      name="keywords"
+      content="generador de portada, UNAN, Universidad Nacional Autónoma de Nicaragua, portadas, documentos, PDF"
     />
     <meta name="author" content="Deybis Antonio Melendez Vargas" />
+    <meta property="og:title" content="Generador de Portada UNAN PDF" />
+    <meta
+      property="og:description"
+      content="Una herramienta en línea para generar portadas personalizadas para documentos académicos de la Universidad Nacional Autónoma de Nicaragua."
+    />
+    <meta property="og:image" content="/unan logo.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Generador de Portada UNAN PDF" />
+    <meta
+      name="twitter:description"
+      content="Una herramienta en línea para generar portadas personalizadas para documentos académicos de la Universidad Nacional Autónoma de Nicaragua."
+    />
+    <meta name="twitter:image" content="/unan logo.jpg" />
+    <meta name="twitter:site" content="@DeybisMelendez" />
     <title>Generador de Portada UNAN PDF</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.blue.min.css"
     />
-    <style>
-        header { text-align: center; padding: 2rem 0; }
-        header img { max-width: 250px; margin-bottom: 1rem; }
-        #generarPDF { width: 100%; font-weight: bold; }
-    </style>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body>
     <main class="container">
       <header>
-        <img src="unan logo.jpg" alt="Logo de la UNAN-Managua" />
-        <h1>GENERADOR DE PORTADA UNAN</h1>
+        <h1>Generador de portada de la UNAN</h1>
+        <img src="./unan logo.jpg" alt="Logo de la UNAN" />
+        <a
+          class="github-button"
+          href="https://github.com/deybismelendez"
+          data-color-scheme="no-preference: light; light: light; dark: dark;"
+          data-size="large"
+          aria-label="Follow @deybismelendez on GitHub"
+          >Follow @deybismelendez</a
+        >
+        <a
+          class="github-button"
+          href="https://github.com/deybismelendez/portada-unan"
+          data-color-scheme="no-preference: light; light: light; dark: dark;"
+          data-icon="octicon-star"
+          data-size="large"
+          aria-label="Star deybismelendez/portada-unan on GitHub"
+          >Star</a
+        >
+        <a
+          class="github-button"
+          href="https://github.com/deybismelendez/portada-unan/fork"
+          data-color-scheme="no-preference: light; light: light; dark: dark;"
+          data-icon="octicon-repo-forked"
+          data-size="large"
+          aria-label="Fork deybismelendez/portada-unan on GitHub"
+          >Fork</a
+        >
       </header>
-      
       <section>
         <div class="grid">
           <div>
             <label for="fecha">Fecha</label>
-            <input type="date" id="fecha" />
+            <input type="date" name="fecha" id="fecha" />
           </div>
           <div>
             <label for="lugar">Lugar</label>
-            <input type="text" id="lugar" value="Managua, Nicaragua" />
+            <input
+              type="text"
+              name="lugar"
+              id="lugar"
+              placeholder="Lugar"
+              value="Managua, Nicaragua"
+            />
           </div>
         </div>
-
         <div class="grid">
           <div>
-            <label for="centro">Facultad / Recinto</label>
-            <input type="text" id="centro" placeholder="Ej: Facultad de Ciencias e Ingeniería" />
+            <label for="facultad">Nombre de la facultad</label>
+            <input
+              type="text"
+              name="facultad"
+              id="facultad"
+              placeholder="Facultad"
+              value=""
+            />
           </div>
           <div>
-            <label for="carrera">Carrera</label>
-            <input type="text" id="carrera" placeholder="Nombre de la carrera" />
+            <label for="carrera">Nombre de la carrera</label>
+            <input
+              type="text"
+              name="carrera"
+              id="carrera"
+              placeholder="Carrera"
+              value=""
+            />
           </div>
         </div>
-
         <div class="grid">
           <div>
-            <label for="modulo">Asignatura / Componente</label>
-            <input type="text" id="modulo" placeholder="Nombre de la materia" />
+            <label for="clase">Nombre de la clase</label>
+            <input type="text" name="clase" id="clase" placeholder="Clase" />
           </div>
           <div>
-            <label for="docente">Nombre del Docente</label>
-            <input type="text" id="docente" placeholder="Grado y nombre del docente" />
+            <label for="docente">Nombre del docente</label>
+            <input
+              type="text"
+              name="docente"
+              id="docente"
+              placeholder="Docente"
+            />
           </div>
         </div>
-
         <div>
-          <label for="tarea">Título del Trabajo / Tema</label>
-          <textarea id="tarea" placeholder="Describa el tema central del trabajo"></textarea>
+          <label for="tarea">Nombre de la tarea</label>
+          <textarea name="tarea" id="tarea" placeholder="Tarea" ></textarea>
+        </div>
+        <div>
+          <label for="estudiantes">Elaborado por</label>
+          <textarea
+            name="estudiantes"
+            id="estudiantes"
+            placeholder="Elaborado por"
+          ></textarea>
         </div>
 
-        <div>
-          <label for="estudiantes">Elaborado por (Integrantes):</label>
-          <textarea id="estudiantes" placeholder="Un nombre por línea o Nombre y Carnet" rows="4"></textarea>
-        </div>
-
-        <button id="generarPDF">Generar Portada PDF</button>
+        <button id="generarPDF">Generar PDF</button>
       </section>
     </main>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="./app.js"></script>
   </body>
