--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       property="og:description"
       content="Una herramienta en línea para generar portadas personalizadas para documentos académicos de la Universidad Nacional Autónoma de Nicaragua."
     />
-    <meta property="og:image" content="/unan logo.jpg" />
+    <meta property="og:image" content="/unan_logo.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Generador de Portada UNAN PDF" />
     <meta
       name="twitter:description"
       content="Una herramienta en línea para generar portadas personalizadas para documentos académicos de la Universidad Nacional Autónoma de Nicaragua."
     />
-    <meta name="twitter:image" content="/unan logo.jpg" />
+    <meta name="twitter:image" content="/unan_logo.jpg" />
     <meta name="twitter:site" content="@DeybisMelendez" />
     <title>Generador de Portada UNAN PDF</title>
     <link
@@ -37,7 +37,7 @@
     <main class="container">
       <header>
         <h1>Generador de portada de la UNAN</h1>
-        <img src="./unan logo.jpg" alt="Logo de la UNAN" />
+        <img src="./unan_logo.jpg" alt="Logo de la UNAN" />
         <a
           class="github-button"
           href="https://github.com/deybismelendez"
